# Flask-Web-Example

./: .gitignore  Makefile  pyproject.toml
flask_example/: example.py  load_users.py  users.json
flask_example/templates/: index.html
flask_example/templates/users/: edit.html  login.html  new.html  new_user.html  show.html  users.json
